Fix find pages titles when some title is null